--- a/HealthCare_Patient/HealthCare/HealthCare/App.xaml
+++ b/HealthCare_Patient/HealthCare/HealthCare/App.xaml
@@ -15,6 +15,8 @@
       <converters:NullToTrueConverter x:Key="NullToTrueConverter" />
       <converters:ColumnCheckupConverter x:Key="ColumnCheckupConverter" />
       <converters:NullToTrueConverter x:Key="NullToFalseConverter" IsInvert="True" />
+      <converters:StringNullOrEmptyToBoolConverter x:Key="StringNullOrEmptyToFalseConverter" IsInvert="False" />
+      <converters:StringNullOrEmptyToBoolConverter x:Key="StringNullOrEmptyToTrueConverter" IsInvert="True" />
       <converters:StringNullConverter x:Key="StringNullConverter" IsFadeText="True"/>
       <converters:StringNullConverter x:Key="StringNullWithoutFadeConverter" IsFadeText="False" />
       <converters:HideCardIdConverter x:Key="HideCardIdConverter" />
